objects/GEMS_Return_Reason__c.object
<CustomObject>
    <fields>
        <fullName>GEMS_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Return Reasons</relationshipLabel>
        <relationshipName>GEMS_Return_Reasons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GEMS_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GEMS_Sub_Type__c</fullName>
        <label>ABS/Matirx Sub Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>GEMS_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Distinction</fullName>
                </value>
                <value>
                    <fullName>BVA</fullName>
                </value>
                <value>
                    <fullName>Eligibility Provisions</fullName>
                </value>
                <value>
                    <fullName>Emergency Benefits</fullName>
                </value>
                <value>
                    <fullName>Exclusions</fullName>
                </value>
                <value>
                    <fullName>Federal Mandates</fullName>
                </value>
                <value>
                    <fullName>General Information Summary</fullName>
                </value>
                <value>
                    <fullName>General Provisions</fullName>
                </value>
                <value>
                    <fullName>Hearing</fullName>
                </value>
                <value>
                    <fullName>Inpatient Hospital Benefits</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Benefit Provisions</fullName>
                </value>
                <value>
                    <fullName>National Radiology Quality Initiative (NRQI)</fullName>
                </value>
                <value>
                    <fullName>Other Covered Services</fullName>
                </value>
                <value>
                    <fullName>Outpatient Hospital Benefits</fullName>
                </value>
                <value>
                    <fullName>Overall Program Payment Provisions</fullName>
                </value>
                <value>
                    <fullName>Prescription Drug Benefits</fullName>
                </value>
                <value>
                    <fullName>Preventive Health Benefits</fullName>
                </value>
                <value>
                    <fullName>Professional Service Benefits</fullName>
                </value>
                <value>
                    <fullName>Reference Based Pricing (RBP)</fullName>
                </value>
                <value>
                    <fullName>Substance Use Disorder</fullName>
                </value>
                <value>
                    <fullName>Utilization Management</fullName>
                </value>
                <value>
                    <fullName>VBID</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GEMS_Type__c</fullName>
        <label>Returned Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>ACA CALCULATORS</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT CHANGE REQUEST FORM</fullName>
                </value>
                <value>
                    <fullName>ACCOUNT STRUCTURE</fullName>
                </value>
                <value>
                    <fullName>ACH/WIRE FORM</fullName>
                </value>
                <value>
                    <fullName>ADDENDUM TO BPA FOR AFFILIATES</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRATIVE SERVICE AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>ASO AGREEMENT</fullName>
                </value>
                <value>
                    <fullName>ASO BENEFIT PROG APP (BPA)</fullName>
                </value>
                <value>
                    <fullName>ASO MANDATE CHECKLIST</fullName>
                </value>
                <value>
                    <fullName>BENEFIT ADHOC MEETING MINUTES</fullName>
                </value>
                <value>
                    <fullName>BENEFIT BOOKLETS / CERTIFICATES</fullName>
                </value>
                <value>
                    <fullName>BENEFIT EDIT TOOL</fullName>
                </value>
                <value>
                    <fullName>BENEFIT MATRIX</fullName>
                </value>
                <value>
                    <fullName>BENEFIT PROG DESCRIPTION-DENTAL</fullName>
                </value>
                <value>
                    <fullName>BENEFIT PROGRAM DESCRIPTION-BPD</fullName>
                </value>
                <value>
                    <fullName>BENEFIT WALLET DISCOVERY FORM</fullName>
                </value>
                <value>
                    <fullName>BINDER CHECK</fullName>
                </value>
                <value>
                    <fullName>BPA - ASOSIGNED</fullName>
                    <label>BPA - ASO SIGNED</label>
                </value>
                <value>
                    <fullName>BPA - ASO UNSIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - DENTALSIGNED</fullName>
                    <label>BPA - DENTAL SIGNED</label>
                </value>
                <value>
                    <fullName>BPA - DENTAL UNSIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - HCASIGNED</fullName>
                    <label>BPA - HCA SIGNED</label>
                </value>
                <value>
                    <fullName>BPA - HCA UNSIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - HEALTHSIGNED</fullName>
                    <label>BPA - HEALTH SIGNED</label>
                </value>
                <value>
                    <fullName>BPA - HEALTH UNSIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - SIGNED</fullName>
                </value>
                <value>
                    <fullName>BPA - UNSIGNED</fullName>
                </value>
                <value>
                    <fullName>BPS</fullName>
                </value>
                <value>
                    <fullName>BROKER TRANS/AOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>Process name that auto populates from Case object.</description>
        <label>Process Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Setup Screening</fullName>
                </value>
                <value>
                    <fullName>Benefit Coding Screening</fullName>
                </value>
                <value>
                    <fullName>CDHP Tax Screening</fullName>
                </value>
                <value>
                    <fullName>Dental Screening</fullName>
                </value>
                <value>
                    <fullName>Dental Underwriting Screening</fullName>
                </value>
                <value>
                    <fullName>EPO Screening</fullName>
                </value>
                <value>
                    <fullName>FSU Membership Screening</fullName>
                </value>
                <value>
                    <fullName>Medical Management Screening</fullName>
                </value>
                <value>
                    <fullName>Underwriting Screening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Missing doc</fullName>
                </value>
                <value>
                    <fullName>Incomplete doc</fullName>
                </value>
                <value>
                    <fullName>Ambiguous/Clarification Required</fullName>
                </value>
                <value>
                    <fullName>Benefit cannot be supported</fullName>
                </value>
                <value>
                    <fullName>Benefit discrepancy</fullName>
                </value>
                <value>
                    <fullName>Rate discrepancy</fullName>
                </value>
                <value>
                    <fullName>Enrollment discrepancy</fullName>
                </value>
                <value>
                    <fullName>Benefit not compliant</fullName>
                </value>
                <value>
                    <fullName>CBSR required</fullName>
                </value>
                <value>
                    <fullName>Benefit not filed / approved by DOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBC_BB_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SBC/BB Form</label>
        <referenceTo>GEMS_SBC_BB_Form__c</referenceTo>
        <relationshipLabel>GEMS Return Reasons</relationshipLabel>
        <relationshipName>GEMS_Return_Reasons</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GEMS Return Reason</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Return Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS Return Reasons</pluralLabel>
    <recordTypes>
        <fullName>GEMS_Form_Return_Reason</fullName>
        <active>true</active>
        <label>GEMS Form Return Reason</label>
    </recordTypes>
    <recordTypes>
        <fullName>GEMS_Return_Reason</fullName>
        <active>true</active>
        <label>GEMS Return Reason</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>